[gd_scene load_steps=5 format=2]

[ext_resource path="res://parameter_nodes/parameter_scripts/ParameterText.gd" type="Script" id=1]
[ext_resource path="res://parameter_nodes/extensions/Ext_LineEdit.gd" type="Script" id=2]
[ext_resource path="res://gui/textures/button_reset.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/Resizable.gd" type="Script" id=4]

[node name="ParameterText" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 45.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="."]
margin_bottom = 45.0

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 35.0
text = "Text Label"

[node name="Text" type="LineEdit" parent="."]
margin_left = 126.0
margin_right = 1228.0
margin_bottom = 45.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="ButtonReset" type="Button" parent="."]
margin_left = 1236.0
margin_right = 1272.0
margin_bottom = 45.0
rect_min_size = Vector2( 36, 0 )
disabled = true
icon = ExtResource( 3 )
flat = true
expand_icon = true
script = ExtResource( 4 )
resize_height = false

[node name="Spacer2" type="Control" parent="."]
margin_left = 1280.0
margin_right = 1280.0
margin_bottom = 45.0

[connection signal="value_committed" from="Text" to="." method="_on_Text_value_committed"]
[connection signal="pressed" from="ButtonReset" to="." method="_on_ButtonReset_pressed"]
